--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-1. no latent variables
+1. no latent variables DONE
+2. 
 2. learn latent variables directly from X
 3. learn latent variables from data
 
