--- a/README
+++ b/README
@@ -1,16 +1,13 @@
-TODO: change cccp error to <w,phi>, inference only computes max!!!
-TODO: RunInference save to files. No disk read/write DONE
-
-1. no latent variables DONE
-2. 
-2. learn latent variables directly from X
-3. learn latent variables from data
+add latent variables DONE.
+RunInference save to files. No disk read/write DONE.
+learn latent variables directly from X TODO
+learn latent variables from data TODO
 
 * use the negative portion of exponential function
-
 * verbose messages
 * loss function - evaluation criteria
 
-*** added -g for debugging mex functiosn, DO CHANGE IT BACK LATER
+*** added -g for debugging mex functiosn, DO CHANGE IT BACK LATER DONE.
 
 What are support vectors? if there is only 1 training example, why multiple support vectors??
+
